--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,6 @@
 doctype html
-head
-
-body
-  script(src="//localhost:35729/livereload.js")
+html
+  head
+  body
+    h4 Hello World!
+    script(src="//localhost:35729/livereload.js")
